# Stellardex

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  SUBMISSION.md  implementation.md
.github/workflows/: ci.yml  deploy.yml
contracts/: Cargo.toml
contracts/pool/: Cargo.toml
contracts/pool/src/: events.rs  lib.rs  math.rs  storage.rs
contracts/pool/test_snapshots/test/: test_deposit_and_get_reserves.1.json  test_deposit_withdraw_round_trip.1.json  test_get_price.1.json  test_swap_slippage_protection.1.json  test_swap_xlm_for_usdc.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
contracts/token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_burn.1.json  test_mint_and_balance.1.json  test_transfer.1.json
docs/: contract-test-output.txt
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/liquidity/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/app/swap/: page.tsx
frontend/app/wallet/: page.tsx
frontend/components/: LiquidityCard.tsx  PriceImpact.tsx  SwapCard.tsx  TxHistory.tsx  WalletButton.tsx
frontend/components/layout/: Footer.tsx  Navbar.tsx
frontend/components/sections/: FeaturesSection.tsx  HeroSection.tsx  PoolSection.tsx  StatsSection.tsx  SwapSection.tsx
frontend/components/wallet/: stellar-wallet-panel.tsx
frontend/hooks/: use-stellar-wallet.ts
frontend/lib/: contracts.ts  math.ts  stellar-sdk.ts  stellar-wallet.ts  stellar.ts  store.ts
scripts/: deploy.sh  init-pool.sh
