[package]
name = "stellardex-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellardex-token = { path = "../token", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
